--- a/app/views/login.html
+++ b/app/views/login.html
@@ -1,7 +1,8 @@
 <div class="ui middle aligned center aligned grid">
-    <div class="column">
+    <div class="column" style="max-width: 450px;">
         <h2 class="ui teal image header">
             <img src="../images/EELogo.png" class="image">
+
             <div class="content">
                 Log-in to your account
             </div>
@@ -11,24 +12,33 @@
                 <div class="field">
                     <div class="ui left icon input">
                         <i class="user icon"></i>
-                        <input type="text" name="email" placeholder="E-mail address">
+                        <input ng-model="email" type="text" name="email" placeholder="E-mail address">
                     </div>
                 </div>
                 <div class="field">
                     <div class="ui left icon input">
                         <i class="lock icon"></i>
-                        <input type="password" name="password" placeholder="Password">
+                        <input ng-model="password" type="password" name="password" placeholder="Password">
                     </div>
                 </div>
-                <div class="ui fluid large teal submit button">Login</div>
-            </div>
+                <div ng-click="login()" class="ui fluid large teal submit button">Login</div>
+                <div class="ui horizontal divider"></div>
+                <div class="inline field">
+                    <div class="ui checkbox">
+                        <input type="checkbox" ng-model="remember">
+                        <label>Remember me</label>
+                    </div>
+                </div>
 
-            <div class="ui error message"></div>
+            </div>
 
         </form>
 
         <div class="ui message">
             Don't have an account? <a href="#">Register</a>
+        </div>
+        <div class="ui negative message">
+            {{res}}
         </div>
     </div>
 </div>
