Implemented register and login on clientside

--- a/app/views/header.html
+++ b/app/views/header.html
@@ -1,5 +1,5 @@
 <div class="ui container">
-    <a ui-sref="login()" class="ui teal image header item">
+    <a ui-sref="home()" class="ui teal image header item">
         <img src="../images/EELogo.png" alt=""/>
         <b>Books</b>
     </a>
