--- a/app/views/books.html
+++ b/app/views/books.html
@@ -41,3 +41,31 @@
         </div>
     </div>
 </div>
+<div class="ui middle aligned center aligned grid">
+    <div class="column">
+        <div class="ui pagination menu">
+            <a class="icon item">
+                <i class="angle left icon"></i>
+            </a>
+            <a class="item">
+                Active: 1
+            </a>
+            <!--<div class="disabled item">-->
+                <!--...-->
+            <!--</div>-->
+            <!--<a class="item">-->
+                <!--10-->
+            <!--</a>-->
+            <!--<a class="item">-->
+                <!--11-->
+            <!--</a>-->
+            <!--<a class="item">-->
+                <!--12-->
+            <!--</a>-->
+            <a class="icon item">
+                <i class="angle right icon"></i>
+            </a>
+        </div>
+    </div>
+</div>
+
