--- a/app/views/books.html
+++ b/app/views/books.html
@@ -8,6 +8,7 @@
                 {{b.likeNumber}}
               <i class="thumbs outline up icon"></i>
           </span>
+
             <div class="header">
                 {{b.title}}
             </div>
@@ -44,25 +45,27 @@
 <div class="ui middle aligned center aligned grid">
     <div class="column">
         <div class="ui pagination menu">
-            <a class="icon item">
+            <a ng-click="currentPage==1 || getBooks(currentPage-1)" class="icon item"
+               ng-class="{'disabled':currentPage==1}">
                 <i class="angle left icon"></i>
             </a>
-            <a class="item">
-                Active: 1
+            <a class="item disabled active">
+                {{currentPage}}
             </a>
             <!--<div class="disabled item">-->
-                <!--...-->
+            <!--...-->
             <!--</div>-->
             <!--<a class="item">-->
-                <!--10-->
+            <!--10-->
             <!--</a>-->
             <!--<a class="item">-->
-                <!--11-->
+            <!--11-->
             <!--</a>-->
             <!--<a class="item">-->
-                <!--12-->
+            <!--12-->
             <!--</a>-->
-            <a class="icon item">
+            <a ng-click="currentPage==maxPage || getBooks(currentPage+1)" class="icon item"
+               ng-class="{'disabled':currentPage==maxPage}">
                 <i class="angle right icon"></i>
             </a>
         </div>
