--- a/app/views/layout.html
+++ b/app/views/layout.html
@@ -1,2 +1,3 @@
-<div ui-view="header"  class="ui menu fixed borderless"></div>
-<div ui-view class="ui main container " style="margin-top: 7em"></div>
+<div ui-view="header" class="ui menu borderless fixed"></div>
+<div ui-view style="margin-top: 7em"></div>
+
