--- a/app/views/header.html
+++ b/app/views/header.html
@@ -1,12 +1,12 @@
 <div class="ui container">
-    <a ui-sref="home()" class="ui teal image header item">
+    <a ui-sref="home()" class="ui image header item">
         <img src="../images/EELogo.png" alt=""/>
         <b>Books</b>
     </a>
 
     <div class="ui right floated item">
         <div class="ui compact menu">
-            <div class="ui simple dropdown item">
+            <div class="ui top right pointing dropdown item">
                 {{user.email}}
                 <i class="dropdown icon"></i>
 
