--- a/app/views/header.html
+++ b/app/views/header.html
@@ -5,8 +5,8 @@
     </a>
 
     <div class="ui right floated item">
-        <div class="ui compact menu">
-            <div class="ui top right pointing dropdown item">
+        <!--<div class="ui compact menu">-->
+            <div class="ui top right pointing compact dropdown item">
                 {{user.email}}
                 <i class="dropdown icon"></i>
 
@@ -19,8 +19,9 @@
                     <div class="item" ng-click="logout()">Logout</div>
                 </div>
             </div>
-        </div>
+        <!--</div>-->
     </div>
+    <div class="ui modal">modal tekst</div>
     <!--<div class="ui item">-->
     <!--<div class="ui icon top left pointing dropdown button" id="config-button">-->
     <!--<i class="wrench icon"></i>-->
