--- a/app/views/header.html
+++ b/app/views/header.html
@@ -6,7 +6,7 @@
 
     <div class="ui right floated item">
         <!--<div class="ui compact menu">-->
-            <div class="ui top right pointing compact dropdown item">
+            <div class="ui top right pointing compact dropdown item" create-dropdown control="dropdownControl">
                 {{user.email}}
                 <i class="dropdown icon"></i>
 
@@ -21,20 +21,4 @@
             </div>
         <!--</div>-->
     </div>
-    <div class="ui modal">modal tekst</div>
-    <!--<div class="ui item">-->
-    <!--<div class="ui icon top left pointing dropdown button" id="config-button">-->
-    <!--<i class="wrench icon"></i>-->
-    <!--<div class="menu">-->
-    <!--<div class="item">My Books</div>-->
-    <!--<div class="item">Add Book</div>-->
-    <!--<div class="ui divider"></div>-->
-    <!--<div class="header">Account</div>-->
-    <!--<div class="item" ng-click="sh()">Change Password</div>-->
-    <!--<div class="item">Logout</div>-->
-    <!--</div>-->
-    <!--</div>-->
-    <!--</div>-->
-
-
 </div>
