--- a/app/views/user.html
+++ b/app/views/user.html
@@ -1,1 +1,7 @@
-<div ui-view="books"></div>
+<div class="ui main container">
+    <div class="ui basic segment">
+        <h1 class="ui header">My Books</h1>
+        <div ui-view="books"></div>
+    </div>
+
+</div>
