Added functionality to get books by user with paging

--- a/app/views/books.html
+++ b/app/views/books.html
@@ -18,11 +18,11 @@
             </div>
             <div class="description">
                 <div ng-if=b.shortDesc>
-                    Short: {{b.shortDesc}}
+                    {{b.shortDesc}}
                     <a ng-click="openModal(b)">Read more</a>
                 </div>
                 <div ng-if=!b.shortDesc>
-                    Long: {{b.description}}
+                    {{b.description}}
                 </div>
 
             </div>
