Added edit and delete functionalities. Refactored modal directive. Added animated toasts.

--- a/app/views/books.html
+++ b/app/views/books.html
@@ -69,5 +69,5 @@
     </div>
 </div>
 
-<modal ng-model="showModal" book-instance="bookInstance" template="modal-book.html">
+<modal ng-model="showModal" book-instance="bookInstance" controller="ModalBookController" template="modal-book.html">
 </modal>
