--- a/app/views/home.html
+++ b/app/views/home.html
@@ -12,7 +12,7 @@
                         </a>
 
                         <div class="middle aligned content">
-                            <a ng-click="openModal(b)" class="header">Title{{b.title}}</a>
+                            <a ng-click="openModal(b)" class="header">{{b.title}}</a>
 
                             <div class="meta">
                                 <div>By {{b.author}}</div>
@@ -31,5 +31,5 @@
         <div ui-view="books"></div>
     </div>
 </div>
-<modal ng-model="showModal" book-instance="bookInstance" template="modal-book.html">
+<modal ng-model="showModal" book-instance="bookInstance" controller="ModalBookController" template="modal-book.html">
 </modal>
