--- a/app/views/header.html
+++ b/app/views/header.html
@@ -11,7 +11,7 @@
 
                 <div class="menu">
                     <div class="item" ui-sref="root.user()">My Books</div>
-                    <div class="item">Add Book</div>
+                    <div class="item" ui-sref="root.editBook({id:'newBook'})">Add Book</div>
                     <div class="ui divider"></div>
                     <div class="header">Account</div>
                     <div class="item" ng-click="changePass()">Change Password</div>
