Implemented change pass feature.

--- a/app/views/header.html
+++ b/app/views/header.html
@@ -20,3 +20,5 @@
             </div>
     </div>
 </div>
+<modal ng-model="showModal" controller="ModalChangePassController" template="modal-change-pass.html">
+</modal>
