--- a/app/views/home.html
+++ b/app/views/home.html
@@ -31,5 +31,5 @@
         <div ui-view="books"></div>
     </div>
 </div>
-<modal ng-model="showModal" book-instance="bookInstance" controller="ModalBookController" template="modal-book.html">
+<modal ng-model="showModal" source-object="bookInstance" controller="ModalBookController" template="modal-book.html">
 </modal>
