--- a/app/views/home.html
+++ b/app/views/home.html
@@ -8,18 +8,18 @@
                 <div class="ui items">
                     <div ng-repeat="b in books" class="item">
                         <a class="ui tiny image">
-                            <img ng-click="openModal(b)" src={{b.imageUrl}}>
+                            <img ng-click="openBookModal(b)" src={{b.imageUrl}}>
                         </a>
 
                         <div class="middle aligned content">
-                            <a ng-click="openModal(b)" class="header">{{b.title}}</a>
+                            <a ng-click="openBookModal(b)" class="header">{{b.title}}</a>
 
                             <div class="meta">
                                 <div>By {{b.author}}</div>
                             </div>
                             <div>
-                                {{b.likeNumber}}
-                                <i class="thumbs outline up icon"></i></div>
+                                <i class="checkmark box icon"></i>{{b.likeNumber}}
+                            </div>
                         </div>
                     </div>
                 </div>
@@ -31,5 +31,6 @@
         <div ui-view="books"></div>
     </div>
 </div>
-<modal ng-model="showModal" source-object="bookInstance" controller="ModalBookController" template="modal-book.html">
+<modal ng-model="showBookModal" source-object="bookInstance" controller="ModalBookController" template="modal-book.html">
 </modal>
+
