--- a/app/views/home.html
+++ b/app/views/home.html
@@ -17,8 +17,8 @@
                             <div class="meta">
                                 <div>By {{b.author}}</div>
                             </div>
-                            <div>
-                                <i class="checkmark box icon"></i>{{b.likeNumber}}
+                            <div class="meta">
+                                <i class="user icon"></i>{{b.likeNumber}}
                             </div>
                         </div>
                     </div>
