--- a/app/views/header.html
+++ b/app/views/header.html
@@ -5,19 +5,24 @@
     </a>
 
     <div class="ui right floated item">
-            <div class="ui top right pointing dropdown item" create-dropdown control="dropdownControl" config="dropdownConfig">
-                {{user.email}}
-                <i class="dropdown icon"></i>
+        <div class="ui top right pointing dropdown item" create-dropdown control="dropdownControl"
+             config="dropdownConfig">
+            {{user.email}}
+            <i class="dropdown icon"></i>
 
-                <div class="menu">
-                    <div class="item" ui-sref="root.user()">My Books</div>
-                    <div class="item" ui-sref="root.editBook({id:'newBook'})">Add Book</div>
-                    <div class="ui divider"></div>
-                    <div class="header">Account</div>
-                    <div class="item" ng-click="changePass()">Change Password</div>
-                    <div class="item" ng-click="logout()">Logout</div>
-                </div>
+            <div class="menu">
+                <div class="item" ui-sref="root.user()">My Books</div>
+                <div class="item" ui-sref="root.editBook({id:'newBook'})">Add Book</div>
+                <div class="ui divider"></div>
+                <div class="header">Account</div>
+                <div class="item" ng-click="changePass()">Change Password</div>
+                <div class="item" ng-click="logout()">Logout</div>
+                <div class="ui divider"></div>
+                <div class="header">Admin</div>
+                <div class="item" ui-sref="root.verifyBooks()">Verify Books</div>
+                <div class="item" >Manage Users</div>
             </div>
+        </div>
     </div>
 </div>
 <modal ng-model="showModal" controller="ModalChangePassController" template="modal-change-pass.html">
