started working on Users panel

--- a/app/views/header.html
+++ b/app/views/header.html
@@ -11,7 +11,7 @@
             <i class="dropdown icon"></i>
 
             <div class="menu">
-                <div class="item" ui-sref="root.user()">My Books</div>
+                <div class="item" ui-sref="root.wishlist()">My Wishlist</div>
                 <div class="item" ui-sref="root.editBook({id:'newBook'})">Add Book</div>
                 <div class="ui divider"></div>
                 <div class="header">Account</div>
@@ -20,7 +20,7 @@
                 <div class="ui divider"></div>
                 <div class="header">Admin</div>
                 <div class="item" ui-sref="root.verifyBooks()">Verify Books</div>
-                <div class="item" >Manage Users</div>
+                <div class="item" ui-sref="root.users()">Manage Users</div>
             </div>
         </div>
     </div>
